# FastApiCrud

./: .coverage  .pre-commit-config.yaml  AGENTS.md  Makefile  main.py  pyproject.toml
src/api/: api.py  test_api_sqlalchemy.py
src/api/api_builders/: sqlalchemy_api_builder.py
src/api/filter_factories/: base.py  fastapi_filters_factory.py
src/examples/: sa.py  test_api_dictionary.py
src/package1/: module_a.py
src/repository/: __init__.py  crud_filter.py  crud_repository.py  dictionary_crud_repository.py  mongo_filter.py  pymongo_crud_repository.py  sqlalchemy_crud_repository.py
src/service/: __init__.py  crud_service.py  crud_service_mapper.py  dictionary_crud_service.py  pymongo_crud_service.py  sqlalchemy_crud_service.py  types.py
tests/: conftest.py  test_repo_types.py  test_sa_crud_repository.py  test_sa_crud_service.py  test_service_types.py
