#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "CrudEasy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-filters>=0.3.2",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "ipython>=9.11.0",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "ruff>=0.15.2",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find] 
# include = ["src"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pyright>=1.1.350",
    "ruff>=0.8.0",
    "pre-commit>=4.5.1",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstractmethod",
    "pass"
]

[tool.ruff]
target-version = "py312"
line-length = 100 

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
exclude = ["tests/**", ".venv/**"] 
